--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -1,10 +1,10 @@
 include "base.conf"
 
-db.default.url="jdbc:postgresql://localhost/apidoc"
+db.default.url="jdbc:postgresql://dockerhost/apidoc"
 db.default.username=web
 db.default.password=web
 
-apidoc.www.host="http://localhost:9000"
+apidoc.www.host="http://dockerhost:9000"
 
 play.crypto.secret="development"
 
