--- a/.dockerignore
+++ b/.dockerignore
@@ -14,6 +14,7 @@ api/target/
 api/logs/
 www/target/
 www/logs/
+www/ui/
 project/target/
 .git
 .ivy2
@@ -22,3 +23,4 @@ project/target/
 .DS_STORE
 *.md
 !README.md
+ui-build.sh
